2010-05-12  Chris Toshok  <toshok@ximian.com>

	* Deployment.cs: remove InitializePluginHost and roll its 2 lines
	into InitializeDeployment.  also initialize the appdomain's
	"xap_uri" setting in the non-plugin case.

2010-05-10  Alan McGovern  <amcgovern@novell.com>

	* UIElement.cs: Move TemplateOwner to DependencyObject

	* Expression.cs:
	* FrameworkElement.cs:
	* DependencyObject.cs:
	* TemplateBindingExpression.cs: Move the Expression handling
	  code from FrameworkElement to DependencyObject so that we
	  can support the new SL4 databinding capabilities.

2010-05-03  Sebastien Pouliot  <sebastien@ximian.com>

	* MessageBox.cs: Throw UnauthorizedAccessException is called
	from outside the main UI thread.

2010-04-26  Alan McGovern  <amcgovern@novell.com>

	* DependencyObject.g.cs: Stub out the missing 'Section' class.

2010-04-26  Alan McGovern  <amcgovern@novell.com>

	* DependencyObject.g.cs: The block ctor should be protected
	  and the TextDecorations property should be declared on
	  Inline, not TextElement

2010-04-26  Alan McGovern  <amcgovern@novell.com>

	* NotificationWindow.cs: Update NotificationWindow to SL4
	  compatibility.

2010-04-26  Alan McGovern  <amcgovern@novell.com>

	* ExtensionPart.cs: Make ExtensionPart correctly override
	  ExternalPart.Source.

2010-04-23  Sebastien Pouliot  <sebastien@ximian.com>

	* Deployment.cs: Report 4004 if a MethodAccessException is thrown
	when loading code (see DRT1003)
	* ExtensionPart.cs: Remove empty static ctor and unneeded using
	clauses.

2010-04-21  Sebastien Pouliot  <sebastien@ximian.com>

	* Deployment.cs: Remove call to WebRequest.RegisterDefaultStack
	since the registration is now made by Webrequest itself

2010-04-20  Alan McGovern  <amcgovern@novell.com>

	* WindowStyle.cs:
	* ExternalPart.cs:
	* DependencyObject.g.cs: Add new types and DPs so that the SL4
	  generated DefaultValue tests can compile.

2010-04-19  Alan McGovern  <amcgovern@novell.com>
