@@ -1,3 +1,9 @@
+2010-05-13  Jeffrey Stedfast  <fejj@novell.com>
+
+	* Deployment.cs (InitializeDeployment): Only call ExtractXap() if
+	the xapPath isn't a directory (if it's a directory, then it is
+	already extracted).
+
 2010-05-12  Chris Toshok  <toshok@ximian.com>
 
 	* Deployment.cs: remove InitializePluginHost and roll its 2 lines
